# TP3_Fouille

./: CMakeLists.txt  Makefile  Readme.txt  main.c  multinomial.c  multinomial.h  parseur.c  parseur.h  test.txt  testSet.c  trainingSet.c  trainingSet.h
headers/: Bernouilli.h  parseur.h  testSet.h
src/: Bernouilli.c  main.c  multinomial.c  parseur.c  testSet.c  trainingSet.c
